// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54494,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 267880,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 272304,
}
`;

exports[`PoolManager #mint gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 247193,
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87518,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 187030,
}
`;

exports[`PoolManager #swap gas cost for swap with native tokens against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179990,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87547,
}
`;

exports[`PoolManager #swap gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87326,
}
`;

exports[`PoolManager bytecode size 1`] = `26695`;
